Heroku logo + styling

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html(ng-app='Vidzy')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js')
     script(src='/javascripts/vidzy.js')
   body
+    img (src='images/udemy.png')
     block content
