--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,9 +3,12 @@
     <a href="/#/add-video">Add a Video</a>
 </p>
 <ul>
-    <li ng-repeat='video in videos'>
+   <li ng-repeat='video in videos'>
         <a href="/#/video/{{video._id}}">
             {{video.title}}
+        </a>
+        <a href="/#/video/delete/{{video._id}}">
+            <i class="glyphicon glyphicon-remove"></i>
         </a>
     </li>
 </ul>
